Introducing ContextProvider.configureEnvironment(String name)